--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
+    "@types/axios": "^0.9.36",
     "axios": "^1.7.7",
     "mui": "^0.0.1",
     "next": "14.2.14",
