--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^22.7.5",
     "@types/typescript": "^0.4.29",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -25,6 +26,7 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17"
   }
 }
