--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
