--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,9 @@
     "axios": "^1.7.7",
     "mui": "^0.0.1",
     "next": "14.2.14",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.6",
     "sonner": "^1.5.0"
