--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ DB_URL = mongodb+srv://ntemka93:CifEwY2xckQr2GQu@mkadb.dm494.mongodb.net/FoodDel
 PORT = 8000
 SECRET = "key"
 SALT = 11
+EMAIL_USER=ntemka93@gmail.com
+EMAIL_PASS=ozgdvgnhtnjsbxbo
